crates/ox_content_docs/src/markdown/tests/snapshots/html_example_with_prose_and_fence_renders_blocks.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>examples</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [ArgSchema](./interfaces/ArgSchema.md) | Schema. |

===== combinators/interfaces/ArgSchema.md =====
# Interface: ArgSchema

<div id="argschema" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">1 example</span></span>
<div class="ox-api-entry__prose">
<p>Schema.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function ArgSchema(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--examples">
<h4>Examples</h4>
<div class="ox-api-entry__example">
<div class="ox-api-entry__example-heading">Example 1</div>
<div class="ox-api-entry__prose">
<p>Basic string argument:</p>
<pre><code class="language-ts">const schema = 1</code></pre>
</div>
</div>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>examples</span>
</span>
</div>

## Modules

- [combinators](./combinators/index.md)
