crates/ox_content_docs/src/markdown/tests/snapshots/markdown_example_bare_code_is_wrapped_in_ts_fence.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

_1 symbols · 1 interfaces · 1 examples_

## Interfaces

- [ArgSchema](./interfaces/ArgSchema.md) - Schema.

===== combinators/interfaces/ArgSchema.md =====
# Interface: ArgSchema

Schema.

## Signature

```ts
export function ArgSchema(): void
```

## Examples

```ts
const x = 1
```
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 interfaces · 1 examples_

## Modules

- [combinators](./combinators/index.md)
