crates/ox_content_docs/src/markdown/tests/snapshots/render_generated_by_false_keeps_stats_summary_when_enabled.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/cli.md =====
# Function: cli()

Run the CLI.

## Signature

```ts
export function cli(): void
```
===== default/functions/run.md =====
# Function: run()

Run again.

## Signature

```ts
export function run(): void
```
===== default/index.md =====
# default

Module description.

_2 symbols · 2 functions_

## Functions

- [cli](./functions/cli.md) - Run the CLI.
- [run](./functions/run.md) - Run again.

===== index.md =====
# API Documentation

_1 modules · 2 symbols · 2 functions_

## Modules

- [default](./default/index.md) - Module description.
