crates/ox_content_docs/src/markdown/tests/snapshots/render_stats_false_omits_html_stats_block.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/cli.md =====
# Function: cli()

<div id="cli" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Run the CLI.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function cli(): void</code></pre>
</div>
</div>
===== default/functions/run.md =====
# Function: run()

<div id="run" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Run again.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function run(): void</code></pre>
</div>
</div>
===== default/index.md =====
# default

Module description.

## Functions

| Function | Description |
| ------ | ------ |
| [cli](./functions/cli.md) | Run the CLI. |
| [run](./functions/run.md) | Run again. |

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

## Modules

- [default](./default/index.md) - Module description.
