crates/ox_content_docs/src/markdown/tests/snapshots/render_stats_false_omits_stats_summary.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/cli.md =====
# Function: cli()

Run the CLI.

## Signature

```ts
export function cli(): void
```
===== default/functions/run.md =====
# Function: run()

Run again.

## Signature

```ts
export function run(): void
```
===== default/index.md =====
# default

Module description.

## Functions

- [cli](./functions/cli.md) - Run the CLI.
- [run](./functions/run.md) - Run again.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

## Modules

- [default](./default/index.md) - Module description.
