crates/ox_content_docs/src/markdown/tests/snapshots/render_style_defaults_to_html.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== cli.md =====
# cli.ts

> 2 documented symbols. Read the signatures first, then expand each item for parameters, return types, and examples.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>examples</span>
</span>
</div>

## Reference

<div class="ox-api-controls" data-ox-api-target=".ox-api-entry" role="toolbar" aria-label="Reference display controls">
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="expand">Open all</button>
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="collapse">Close all</button>
</div>

<details id="cli" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">fn</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">cli(argv: string[]): void</code><span class="ox-api-entry__description">Runs the CLI.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">1 param</span><span class="ox-api-badge">returns void</span><span class="ox-api-badge">1 example</span><span class="ox-api-badge">since 1.0.0</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Runs the CLI.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function cli(argv: string[]): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--params">
<h4>Parameters</h4>
<ul class="ox-api-entry__params">
<li class="ox-api-entry__param">
  <div class="ox-api-entry__param-heading">
    <code class="ox-api-entry__param-name">argv</code>
    <code class="ox-api-entry__param-type">string[]</code>
  </div>
  <p class="ox-api-entry__param-description">Arguments.</p>
</li>
</ul>
</div>
<div class="ox-api-entry__section ox-api-entry__section--returns">
<h4>Returns</h4>
<div class="ox-api-entry__return">
  <code class="ox-api-entry__return-type">void</code>
  <p class="ox-api-entry__return-description">Nothing.</p>
</div>
</div>
<div class="ox-api-entry__section ox-api-entry__section--throws">
<h4>Throws</h4>
<ul class="ox-api-entry__throws"><li><code class="ox-api-entry__throws-type">CliError</code> <span class="ox-api-entry__throws-description">When argument parsing fails.</span></li></ul>
</div>
<div class="ox-api-entry__section ox-api-entry__section--examples">
<h4>Examples</h4>
<div class="ox-api-entry__example">
<div class="ox-api-entry__example-heading">Example 1</div>
<pre><code class="language-ts">cli([])</code></pre>
</div>
</div>
  </div>
</details>

<details id="command" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">interface</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">Command</code><span class="ox-api-entry__description">A command.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">1 member</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>A command.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface Command</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group ox-api-entry__member-group--details">
<h5>Methods</h5>
<div class="ox-api-entry__member-details">
<section id="command-run" class="ox-api-entry__member-detail">
<h5>run()</h5>
<pre><code class="language-typescript">run(): void;</code></pre>
<div class="ox-api-entry__member-description">Runs it.</div><div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--throws">
<h6>Throws</h6>
<ul class="ox-api-entry__member-throws"><li><code class="ox-api-entry__throws-type">RunError</code> <span class="ox-api-entry__throws-description">When the command cannot run.</span></li></ul>
</div></section>
</div>
</div>
</div>
  </div>
</details>

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like `@api transform` to limit results to the generated API reference.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>examples</span>
</span>
</div>

## Modules

<details class="ox-api-module">
  <summary>
    <span class="ox-api-module__title"><a href="./cli.md">cli</a></span>
    <span class="ox-api-module__count">2 symbols</span>
  </summary>
  <div class="ox-api-module__body">
    <ul class="ox-api-module__list">
      <li><span class="ox-api-module__kind">fn</span><div class="ox-api-module__item"><a href="./cli.md#cli" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">cli(argv: string[]): void</code></a><span class="ox-api-module__summary">Runs the CLI.</span><span class="ox-api-module__meta"><span class="ox-api-badge">1 param</span><span class="ox-api-badge">returns void</span><span class="ox-api-badge">1 example</span><span class="ox-api-badge">since 1.0.0</span></span></div></li>
      <li><span class="ox-api-module__kind">interface</span><div class="ox-api-module__item"><a href="./cli.md#command" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">Command</code></a><span class="ox-api-module__summary">A command.</span><span class="ox-api-module__meta"><span class="ox-api-badge">1 member</span></span></div></li>
    </ul>
  </div>
</details>
