crates/ox_content_docs/src/markdown/tests/snapshots/render_style_markdown_category_emits_pure_markdown.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== functions.md =====
# Functions

> 1 documented function collected across modules.

_1 symbols · 1 functions · 1 parameters · 1 returns · 1 examples_

## Overview

- [`cli`](#cli) `function` `cli(argv: string[]): void` - Runs the CLI.

## Reference

### cli

Runs the CLI.

#### Since

1.0.0

#### Signature

```ts
export function cli(argv: string[]): void
```

#### Parameters

- `argv` (`string[]`) - Arguments.

#### Returns

`void` — Nothing.

#### Throws

- `CliError` — When argument parsing fails.

#### Examples

```ts
cli([])
```

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_2 symbols · 1 functions · 1 interfaces · 1 parameters · 1 members · 1 returns · 1 examples_

## [Functions](./functions.md)

> 1 item.

- [`cli`](./functions.md#cli) `function` `cli(argv: string[]): void` - Runs the CLI.

## [Interfaces](./interfaces.md)

> 1 item.

- [`Command`](./interfaces.md#command) `interface` `Command` - A command.

===== interfaces.md =====
# Interfaces

> 1 documented interface collected across modules.

_1 symbols · 1 interfaces · 1 members_

## Overview

- [`Command`](#command) `interface` `Command` - A command.

## Reference

### Command

A command.

#### Signature

```ts
export interface Command
```

#### Methods

##### run()

```ts
run(): void;
```

Runs it.

###### Throws

- `RunError` — When the command cannot run.
