crates/ox_content_docs/src/markdown/tests/snapshots/render_style_markdown_flat_emits_pure_markdown.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== cli.md =====
# cli.ts

**[Source](https://github.com/x/y/blob/main/src/cli.ts)**

> 2 documented symbols. Read the signatures first, then expand each item for parameters, return types, and examples.

_2 symbols · 1 functions · 1 interfaces · 1 parameters · 1 members · 1 returns · 1 examples_

## Reference

### cli

Runs the CLI.

#### Since

1.0.0

#### Signature

```ts
export function cli(argv: string[]): void
```

[View source](https://github.com/x/y/blob/main/src/cli.ts#L1-L3)

#### Parameters

- `argv` (`string[]`) - Arguments.

#### Returns

`void` — Nothing.

#### Throws

- `CliError` — When argument parsing fails.

#### Examples

```ts
cli([])
```

### Command

A command.

#### Signature

```ts
export interface Command
```

[View source](https://github.com/x/y/blob/main/src/cli.ts#L5-L8)

#### Methods

##### run()

```ts
run(): void;
```

Runs it.

###### Throws

- `RunError` — When the command cannot run.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like `@api transform` to limit results to the generated API reference.

_1 modules · 2 symbols · 1 functions · 1 interfaces · 1 parameters · 1 members · 1 returns · 1 examples_

## Modules

### [cli](./cli.md) — 2 symbols

- [`cli`](./cli.md#cli) `function` `cli(argv: string[]): void` - Runs the CLI.
- [`Command`](./cli.md#command) `interface` `Command` - A command.
